# smith

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.cursor/rules/: agent-pipeline.mdc  lint-gate.mdc  python-style.mdc  smith-core.mdc
.github/workflows/: ci.yml  publish.yml
.smith/: project_context.json
docs/: future-roadmap.md  vision.md
smith/: __init__.py
smith/cli/: app.py  banner.py  console.py  render.py  thinking_renderer.py
smith/core/: config.py  exceptions.py  formatting.py  logging.py
smith/llm/: base.py  deepseek_provider.py  factory.py  openai_provider.py
smith/memory/: db.py  project_contexts.py  service.py
smith/models/: assistant.py  git_intelligence.py  planning_context.py  project_context.py  status.py  user_context.py  workspace.py  workstation_health.py
smith/services/: analysis_requirements.py  assistant_session.py  capability_registry.py  chat.py  clarification.py  context_acquisition.py  context_confidence.py  context_detection.py  context_gap_analysis.py  context_inference.py  context_orchestrator.py  doctor.py  domain_mapping.py  evidence_validator.py  filesystem_evidence.py  git_intelligence.py  gitignore.py  grounded_assistant.py  grounded_response.py  intent_detection.py  investigation_trace.py  planner.py  planning_confidence.py  project_context.py  repository_intelligence.py  repository_resolution.py  setup_wizard.py  slash_commands.py  status_dashboard.py  tool_runner.py  user_context.py  user_context_store.py  workspace_intelligence.py  (+1 more)
tests/: conftest.py
(+91 files in other folders)
