[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smith"
version = "0.1.0"
description = "Smith - a benevolent personal AI operator"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "openai>=1.0.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "build>=1.0.0",
]

[project.scripts]
smith = "smith.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["smith"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["smith"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
